grafana/mimir/generated/grafana-mimir/templates/ingester/statefulset.yaml
---
# Source: grafana-mimir/templates/ingester/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana-ingester
  namespace: "grafana-mimir"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana-mimir
    app.kubernetes.io/version: 2.13.0
    helm.sh/chart: grafana-mimir-1.2.10
    app.kubernetes.io/part-of: grafana-mimir
    app.kubernetes.io/component: ingester
spec:
  replicas: 2
  podManagementPolicy: "OrderedReady"
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: grafana-mimir
      app.kubernetes.io/part-of: grafana-mimir
      app.kubernetes.io/component: ingester
  serviceName:  grafana-ingester
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: grafana-mimir
        app.kubernetes.io/version: 2.13.0
        helm.sh/chart: grafana-mimir-1.2.10
        app.kubernetes.io/part-of: grafana-mimir
        app.kubernetes.io/component: ingester
        mimir-gossip-member: "true"
    spec:
      serviceAccountName: grafana
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/name: grafana-mimir
                    app.kubernetes.io/component: ingester
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: grafana-mimir-ingester
          image: docker.io/bitnami/grafana-mimir:2.13.0-debian-12-r3
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          args:
            - "-target=ingester"
            - "-config.expand-env=true"
            - "-config.file=/bitnami/grafana-mimir/conf/mimir.yaml"
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 2Gi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          ports:
            - name: http
              containerPort: 8080
            - name: http-memberlist
              containerPort: 7946
            - name: grpc
              containerPort: 9095
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /ready
              port: http
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: mimir-config
              mountPath: /bitnami/grafana-mimir/conf
            - name: data
              mountPath: /bitnami/grafana-mimir
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: mimir-config
          configMap:
            name: grafana
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
