grafana/mimir/generated/grafana-mimir/templates/ingester/headless-service.yaml
---
# Source: grafana-mimir/templates/ingester/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  grafana-ingester-headless
  namespace: "grafana-mimir"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana-mimir
    app.kubernetes.io/version: 2.13.0
    helm.sh/chart: grafana-mimir-1.2.10
    app.kubernetes.io/part-of: grafana-mimir
    app.kubernetes.io/component: ingester
spec:
  publishNotReadyAddresses: true
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
      nodePort: null
    - name: grpc
      port: 9095
      targetPort: grpc
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: grafana-mimir
    app.kubernetes.io/part-of: grafana-mimir
    app.kubernetes.io/component: ingester
